# hyprlauncher

./: Cargo.toml  justfile  readme.md
src/: config.rs  launcher.rs  main.rs  search.rs  ui.rs
