[package]
name = "hyprlauncher"
version = "0.1.1"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for launching applications, written in blazingly fast Rust!"
repository = "https://github.com/nnyyxxxx/hyprlauncher.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "launcher",
]
categories = ["gui"]
edition = "2021"

[dependencies]
gtk4 = "0.9.5"
gio = "0.20.7"
glib = "0.20.7"
once_cell = "1.20.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
fuzzy-matcher = "0.3.7"
dirs = "6.0"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
async-trait = "0.1"
rayon = "1.8"
walkdir = "2.5"
freedesktop_entry_parser = "1.3"
shellexpand = "3.1"
futures = "0.3.31"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
