[package]
name = "hyprlauncher"
version = "0.1.1"
license = "GPL-2.0"
description = "GUI for launching applications, written in blazingly fast Rust!"
repository = "https://github.com/Zuriefais/hyprlauncher.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "launcher",
]
categories = ["gui"]
edition = "2024"

[dependencies]
gtk4 = "0.9.5"
gio = "0.20.9"
glib = "0.20.9"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
fuzzy-matcher = "0.3.7"
dirs = "6.0"
tokio = { version = "1.43", features = ["full", "rt-multi-thread"] }
rayon = "1.10"
walkdir = "2.5"
freedesktop_entry_parser = "1.3"
shellexpand = "3.1"
gtk4-layer-shell = "0.4.0"
zbus = "5.5.0"
anyhow = "1.0.97"
env_logger = "0.11.6"
log = "0.4.26"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
